Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33062

Windows: When switching users while a QGLWidget is still visible then it can cause a crash when the user comes back

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.0
    • 5.1.0
    • GUI: Window management
    • None
    • Windows
    • 4e043026725b1dfd201bf432bdd0b28ba8867196, 9194fc00a61379fa9ccd4b05c480f67b2fb739bc, f738a4a5d5f62c1136b5820a89c9b47080d150a4

      Windows: When switching users while a QGLWidget is still visible then it can cause a crash when the user comes back. The reason it crashes is because the QPlatformWindow for the QGLWidget has been deleted (due to the top level one being recreated) but it has not been recreated at this point. Therefore when it goes to flush the backing store it will crash as it cannot get the HDC for the deleted QPlatformWindow.

      I reproduced this using the hellogl_es2 example and doing the following:

      1) Run the example
      2) CTRL+ALT+DEL and select switch user
      3) Just pick the same user (you don't actually need to switch, as long as the switch user is triggered)
      4) The app will crash

      If it does not crash, then try on a higher resolution such as 1920x1080.

        1. screenchange_stack.txt
          2 kB
        2. stack.txt
          2 kB
        3. diag.patch
          5 kB
        4. log.txt
          49 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes