Windows: Keep monitors when system is locked.

Prevent windows from being recreated due to screen changes which
can cause GL widgets to stop updating among other things.

EnumMonitors returns only one temporary monitor named "WinDisc"
when locked. Do not remove monitors when that happens.

Task-number: QTBUG-33062
Change-Id: Ia2247bb04b3e10f99f594245f84238b5f9044f70
Reviewed-by: Jan Arve Sæther <jan-arve.saether@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>

cregit: 9194fc00a61379fa9ccd4b05c480f67b2fb739bc https://github.com/qt/qtbase/commit/9194fc00a61379fa9ccd4b05c480f67b2fb739bc